# histq

./: Cargo.toml  LICENSE  README.md  histq.plugin.zsh
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
src/: config.rs  db.rs  history.rs  import.rs  lib.rs  main.rs  redact.rs  search.rs  tui.rs
src/shell/: zsh.rs
tests/: cli_test.rs  config_test.rs  db_test.rs  import_test.rs  query_test.rs  ranking_test.rs  redact_test.rs
