[package]
name = "histq"
version = "0.1.0"
edition = "2021"
description = "Project-aware shell history for zsh: an up-arrow that knows your repo"
license = "MIT"
repository = "https://github.com/rajsattamsahoo/histq"
homepage = "https://github.com/rajsattamsahoo/histq"
keywords = ["zsh", "history", "shell", "cli", "sqlite"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "rajsattamsahoo/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[profile.dist]
inherits = "release"
lto = "thin"
